# json_performance

./: CMakeLists.txt
glaze/: CMakeLists.txt
glaze/include/glaze/api/qt/: qchar.hpp  qdatetime.hpp  qmap.hpp  qstring.hpp  quuid.hpp  qvariant.hpp
glaze/include/glaze/concepts/: container_concepts.hpp
glaze/include/glaze/core/: common.hpp
glaze/include/glaze/json/: schema.hpp
glaze/include/glaze/util/: dump.hpp  parse.hpp  variant.hpp  wdump.hpp
src/: main.cpp  test.h
